# domain/proto/user/user.pb.validate.go
@@ -72,6 +72,8 @@ func (m *User) validate(all bool) error {
 
 	// no validation rules for IsActive
 
+	// no validation rules for IsVerified
+
 	// no validation rules for Name
 
 	// no validation rules for Address
@@ -1571,3 +1573,107 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ResendOTPRequestValidationError{}
+
+// Validate checks the field values on ResendOTPResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *ResendOTPResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ResendOTPResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ResendOTPResponseMultiError, or nil if none found.
+func (m *ResendOTPResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ResendOTPResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for OtpCode
+
+	if len(errors) > 0 {
+		return ResendOTPResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// ResendOTPResponseMultiError is an error wrapping multiple validation errors
+// returned by ResendOTPResponse.ValidateAll() if the designated constraints
+// aren't met.
+type ResendOTPResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ResendOTPResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ResendOTPResponseMultiError) AllErrors() []error { return m }
+
+// ResendOTPResponseValidationError is the validation error returned by
+// ResendOTPResponse.Validate if the designated constraints aren't met.
+type ResendOTPResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ResendOTPResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ResendOTPResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ResendOTPResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ResendOTPResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ResendOTPResponseValidationError) ErrorName() string {
+	return "ResendOTPResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ResendOTPResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sResendOTPResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ResendOTPResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ResendOTPResponseValidationError{}
