# domain/user/entity/user.go
@@ -15,7 +15,8 @@ type User struct {
 	PhoneNumber   string        `gorm:"type:varchar(50);not null;unique"`
 	AvatarImageId uuid.NullUUID `gorm:"type:varchar(255);null"`
 	AccessToken   *string       `gorm:"type:varchar(255);null"`
-	IsActive      bool          `gorm:"type:bool;not null;default:FALSE"`
+	IsActive      bool          `gorm:"type:bool;not null;default:TRUE"`
+	IsVerified    bool          `gorm:"type:bool;not null;default:FALSE"`
 	CreatedAt     time.Time     `gorm:"type:timestamptz;not null;default:CURRENT_TIMESTAMP"`
 	CreatedBy     uuid.UUID     `gorm:"type:uuid;not null"`
 	UpdatedAt     *time.Time    `gorm:"type:timestamptz;null"`
@@ -37,6 +38,7 @@ func (u *User) ToProto() *pb.User {
 		PhoneNumber:   u.PhoneNumber,
 		Password:      u.Password,
 		IsActive:      u.IsActive,
+		IsVerified:    u.IsVerified,
 		AvatarImageId: avatarImageId,
 		Name:          u.Name,
 		Address:       u.Address,
